# pay-per-prompt

./: ARCHITECTURE.md  README.md
.devcontainer/: devcontainer.json
.docker/: Dockerfile.dev
cli/: Cargo.toml
cli/src/: client.rs  commands.rs  config.rs  contract.rs  lib.rs  main.rs  provider.rs  utils.rs
contract/: Cargo.toml  README.md  build.sh
contract/src/: lib.rs  signature.rs
lib/: pyproject.toml
nearpc/: pyproject.toml
nearpc/examples/: run_inference.py
nearpc/nearpc/: __init__.py  __main__.py
provider/: .gitignore  Cargo.toml  README.md
provider/configs/: .gitignore  fireworks_config.yaml  openai_openapi.yaml  openai_openapi_full.yaml  test_config.yaml
provider/examples/: test.py
provider/migrations/: 20241215230211_init.down.sql  20241215230211_init.up.sql
provider/scripts/: build_stubs.sh  do_migration.sh
provider/src/: background.rs  common.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  service.rs
