[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "cli"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
near-crypto = "0.27.0"
near-jsonrpc-client = "0.14.0"
near-jsonrpc-primitives = "0.27.0"
near-primitives = "0.27.0"
near-sdk = "5.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
