[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "cli"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
near-crypto = "0.28.0"
near-jsonrpc-client = "0.15.1"
near-jsonrpc-primitives = "0.28.0"
near-primitives = "0.28.0"
near-sdk = "5.7.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
