[package]
name = "payment-channel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.5.1"
near-sdk = "5.6.0"

[dev-dependencies]
near-sdk = { version = "5.6", features = ["unit-testing"] }
near-workspaces = { version = "0.15", features = ["unstable"] }
serde_json = "1"
tokio = { version = "1.12.0", features = ["full"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
