[tool.poetry]
name = "nearpc"
version = "0.1.0"
description = ""
authors = ["Marcelo Fornet <mfornet94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pynacl = "^1.5.0"
base58 = "^2.1.1"
openai = "^1.58.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
