[package]
name = "provider"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["server"]
server = []

[lib]
name = "provider"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
bytes = "1"
anyhow = "1.0.94"
http = "1"
config = "0.14.0"
async-trait = "0.1"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_urlencoded = "0.7"
tracing = { version = "0.1", features = ["attributes"] }
uuid = { version = "1", features = ["serde"] }
axum-extra = { version = "0.9", features = ["cookie", "multipart"] }
tracing-subscriber = "0.3.18"
tokio = { version = "1.42.0", default-features = false, features = [
  "signal",
  "rt-multi-thread",
] }
tower-http = { version = "0.6.2", features = ["full"] }

openaiapi = { version = "2.0.0", path = "stubs/openaiapi", features = ["server"] }
openaiclient = { version = "2.0.0", path = "stubs/openaiclient"}

near-crypto = "0.28.0"
near-jsonrpc-client = "0.15.1"
near-jsonrpc-primitives = "0.28.0"
near-primitives = "0.28.0"
near-sdk = "5.7.0"
near-cli-rs = "0.16.1"

sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "chrono" ] }
chrono = { version = "0.4.39", features = ["serde"] }

cli = { path = "../cli" }
borsh = "1.5.3"
base64 = "0.22.1"
